Format indent of service package